tests/ui/substrate/error/fail_enforced_ret_val.stderr
error: you have to mark this variant with `ret_val` or set `require_ret_val` to `false`
 --> tests/ui/substrate/error/fail_enforced_ret_val.rs:7:5
  |
7 |     Two
  |     ^^^

error[E0433]: failed to resolve: use of undeclared type `Error`
  --> tests/ui/substrate/error/fail_enforced_ret_val.rs:14:25
   |
14 |     assert_encode_holds(Error::One);
   |                         ^^^^^ use of undeclared type `Error`

error[E0433]: failed to resolve: use of undeclared type `Error`
  --> tests/ui/substrate/error/fail_enforced_ret_val.rs:15:27
   |
15 |     assert_try_from_holds(Error::One);
   |                           ^^^^^ use of undeclared type `Error`
